# TSAI

./: README.md
Assignments/: Capstone Project.docx  README.MD
Assignments/Session2-23Aug2025/clinicalbert-api/: .dockerignore  Dockerfile  Makefile  README.md  Sample.txt  docker-compose.gpu.yml  docker-compose.prod.yml  docker-compose.yml  main.py  next.config.mjs  package.json  postcss.config.js  postcss.config.mjs  pyproject.toml  requirements.txt
Assignments/Session2-23Aug2025/clinicalbert-api/.github/workflows/: deploy.yml
Assignments/Session2-23Aug2025/clinicalbert-api/app/: __init__.py  dependencies.py  globals.css  layout.tsx  page.tsx
Assignments/Session2-23Aug2025/clinicalbert-api/app/core/: config.py  logging.py  security.py
Assignments/Session2-23Aug2025/clinicalbert-api/app/middleware/: security_middleware.py
Assignments/Session2-23Aug2025/clinicalbert-api/app/models/: clinical_bert.py
Assignments/Session2-23Aug2025/clinicalbert-api/app/schemas/: auth_schemas.py  fhir_schemas.py
Assignments/Session2-23Aug2025/clinicalbert-api/app/services/: fhir_adapter.py  model_service.py
Assignments/Session2-23Aug2025/clinicalbert-api/app/utils/: fhir_utils.py  text_preprocessing.py
Assignments/Session2-23Aug2025/clinicalbert-api/aws/cloudformation/: infrastructure.yml
Assignments/Session2-23Aug2025/clinicalbert-api/monitoring/: prometheus.yml
Assignments/Session2-23Aug2025/clinicalbert-api/nginx/: nginx.conf  nginx.prod.conf
Assignments/Session2-23Aug2025/clinicalbert-api/scripts/: backup.sh  deploy.sh  monitoring.sh  setup-ec2.sh
(+17 files in other folders)
